# bubbletea

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  handover.md  pyproject.toml
data/: .gitignore  2mrs_v240_short_s18a_fdfc_z0.01_not_in_cf3.fits  Goudfrooij2003_GCS.fits  README.md
data/galaxy_sample/: galaxy_sample_ranked.csv  galaxy_sample_with_coverage.csv  galaxy_sample_with_morphology.csv  pilot_sample_top100.csv
data/ucd/: Pandya2016_ucd_detect.fits  Pandya2016_ucd_nondetect.fits  Zhang2015_m87_ucd.fits  Zhang2015_virgo_ucd.fits
docs/: CONTEXT.md  PLAN.md  SPEC.md  contaminant_benchmark.md  extragalactic_contaminant_catalogs.md  frozen_c1000_persistent_ucd_audit.md  gaia_morphology_host_control_comparison.md  gaia_morphology_host_field_stress.md  gaia_morphology_ucd_crossmatch.md  gaia_selector_features.md  logistic_regularization_sensitivity.md  point_source_logistic_model_v1.md  point_source_logistic_validation_v1.md  point_source_ml_comparison.md  point_source_ml_stability.md  point_source_ml_stability_v2.md  point_source_ml_v2_failure_audit.md  point_source_selector_calibration.md  point_source_selector_integration_v1.md  spectroscopic_stellar_reference.md  todo.md
docs/journal/: 2026-03-27_project_initialization.md  2026-05-11_phase_1_completion.md  2026-05-11_phase_2_completion.md  2026-05-11_phase_3_completion.md  2026-07-14_handover.md  (+14 more)
docs/lessons/: LESSON.md
notebooks/: gclf_and_ucd.ipynb  n3115_gaia_dr3_test.ipynb  s18a_color_color_gal_star.ipynb  sucd-1.ipynb
reference/: additional_260427.md  summary.md
scripts/: config.py
(+437 files in other folders)
