[project]
name = "bubbletea"
version = "0.1.0"
description = "Searching for UCD galaxies using Gaia DR3 astrometry and imaging survey photometry"
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8",
    "ruff>=0.8",
]
datalab = [
    "astro-datalab>=2.22",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
